# replay

./: .dockerignore  .env.example  .gitignore  BUILD_PROMPT.md  DEPLOY.md  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml
docs/screenshots/: README.md
scripts/: dump_schema.py  try_call.py  try_stream.py
src/replay/: __init__.py  assist.py  budget.py  config.py  evals.py  logging.py
src/replay/api/: app.py  routes_assist.py  routes_budget.py  routes_chat.py  routes_evals.py  routes_health.py  routes_insights.py  routes_keys.py  routes_orgs.py  routes_playground.py  routes_prompts.py  routes_providers.py  routes_requests.py  schemas.py
src/replay/auth/: apikeys.py  deps.py  jwt.py
src/replay/cli/: config.py  main.py
src/replay/cost/: calculator.py  pricing.py
src/replay/db/: base.py  models.py  rls.py
src/replay/migrations/: env.py
src/replay/migrations/versions/: 0001_initial.py  0002_gemini_provider.py  0003_chat.py  0004_saved_prompts.py
src/replay/proxy/: capture.py  passthrough.py  router.py  streaming.py
src/replay/proxy/providers/: anthropic.py  base.py  gemini.py
src/replay/vault/: crypto.py  keys.py
tests/: conftest.py
tests/e2e/: conftest.py  test_proxy.py  test_proxy_gemini.py  test_streaming.py
tests/integration/: test_rls.py
tests/unit/: test_apikeys.py  test_cost.py  test_evals.py  test_vault.py
web/: .env.example  index.html  package-lock.json  package.json
web/src/: App.tsx  Budget.tsx  Charts.tsx  Chat.tsx  Dashboard.tsx  Evals.tsx  Insights.tsx  Landing.tsx  Login.tsx  Onboarding.tsx  Playground.tsx  RequestDetailView.tsx  Settings.tsx  api.ts  styles.css
